--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -1,3 +1,8 @@
+/*import fonts */
+@font-face {
+    font-family: 'source sans pro';
+    src: url(/source-sans-pro/source-sans-pro-regular.otf);
+}
 /*Reset */
 * {
     margin: 0;
@@ -14,7 +19,6 @@
     --font-large:32px;
     --font:'Source Sans Pro','Lato', sans-serif;
 }
-
 /** Header Styles **/
 header {
     width:100%;
@@ -36,7 +40,6 @@ header {
     position: relative;
 
 }
-
 .header-nav{
     width: 100%;
     display: flex;
@@ -49,7 +52,6 @@ header {
     line-height: 1.5;
     font-size: var(--font-medium);
 }
-
 /** Media Query desktop version **/
 @media (max-width:1200px)  {
     header {
@@ -192,5 +194,77 @@ a:hover, a:active {
 #menu-toggle:checked ~ #menu-btn::before{
     transform: rotate(45deg);
     top: 3px;
+    margin: auto;
+}
+/** Main Section -Stylesheet 1-index-What we do*/
+main{
+    width: 100%;
+    position: relative;
+}
+main p {
+    text-align: center;
+    width: 65%;
+    margin: 2rem auto;
+    line-height: 1.5;
+    font-size: var(--font-medium);
+    font-family: var(--font);
+}
+.container {
+    padding: 4rem;
+    flex-wrap: wrap;
+}
+.grid {
+    width: 100%;
+    display:grid;
+    font-family:var(--font) ;
+    margin: 2rem auto;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 100%;
+    text-align: center;
+}
+.grid .element{
+    margin: 0.5rem;
+}
+.grid .element p {
+    width: 100%;
+    margin: 0;
+    font-size: 14px;
+    padding: 0.5rem;
+}
+.grid .element h2{
+    font-family: var(--font);
+    font-size: var(--font-medium);
+    padding: 0.5rem;
+}
+/** icons styles **/
+.holberton_school-icon-ic_sound,
+.holberton_school-icon-ic_video,
+.holberton_school-icon-ic_music,
+.holberton_school-icon-ic_hearing {
+    color:var(--color-red);
+    font-size: 46px;
+}
+.section-title {
+    width: 100%;
+    text-align: center;
+    margin: auto;
+    font-family: var(--font);
+    font-size: var(--font-large);
+    font-weight: bold;
+}
+
+/** media queries styles on main */
+.container {
+    padding: 4rem 2.5rem;
+}
+main p {
+    width: 100%;
+}
+.grid{
+    grid-template-columns: 100%;
+    grid-template-rows: 25% 25% 25% 25%;
+}
+.grid .element p{
+    width:70%;
     margin: auto;
 }
