--- a/headphones/3-styles.css
+++ b/headphones/3-styles.css
@@ -1,3 +1,8 @@
+/*import fonts */
+@font-face {
+    font-family: 'source sans pro';
+    src: url(/source-sans-pro/source-sans-pro-regular.otf);
+}
 /*Reset */
 * {
     margin: 0;
@@ -14,7 +19,6 @@
     --font-large:32px;
     --font:'Source Sans Pro','Lato', sans-serif;
 }
-
 /** Header Styles **/
 header {
     width:100%;
@@ -36,7 +40,6 @@ header {
     position: relative;
 
 }
-
 .header-nav{
     width: 100%;
     display: flex;
@@ -49,7 +52,6 @@ header {
     line-height: 1.5;
     font-size: var(--font-medium);
 }
-
 /** Media Query desktop version **/
 @media (max-width:1200px)  {
     header {
@@ -193,4 +195,145 @@ a:hover, a:active {
     transform: rotate(45deg);
     top: 3px;
     margin: auto;
+}
+/** Main Section -Stylesheet 1-index-What we do*/
+main{
+    width: 100%;
+    position: relative;
+}
+main p {
+    text-align: center;
+    width: 65%;
+    margin: 2rem auto;
+    line-height: 1.5;
+    font-size: var(--font-medium);
+    font-family: var(--font);
+}
+.container {
+    padding: 4rem;
+    flex-wrap: wrap;
+}
+.grid {
+    width: 100%;
+    display:grid;
+    font-family:var(--font) ;
+    margin: 2rem auto;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 100%;
+    text-align: center;
+}
+.grid .element{
+    margin: 0.5rem;
+}
+.grid .element p {
+    width: 100%;
+    margin: 0;
+    font-size: 14px;
+    padding: 0.5rem;
+}
+.grid .element h2{
+    font-family: var(--font);
+    font-size: var(--font-medium);
+    padding: 0.5rem;
+}
+/** icons styles **/
+.holberton_school-icon-ic_sound,
+.holberton_school-icon-ic_video,
+.holberton_school-icon-ic_music,
+.holberton_school-icon-ic_hearing {
+    color:var(--color-red);
+    font-size: 46px;
+}
+.section-title {
+    width: 100%;
+    text-align: center;
+    margin: auto;
+    font-family: var(--font);
+    font-size: var(--font-large);
+    font-weight: bold;
+}
+
+/** media queries styles on main */
+.container {
+    padding: 4rem 2.5rem;
+}
+main p {
+    width: 100%;
+}
+.grid{
+    grid-template-columns: 100%;
+    grid-template-rows: 25% 25% 25% 25%;
+}
+.grid .element p{
+    width:70%;
+    margin: auto;
+}
+/** Main section-style sheet 2-index-Results**/
+#results {
+    color: var(--color-white);
+    background-image: url(images/headphones_hero_2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#results .container{
+    padding: 6rem 4rem;
+
+}
+#results .grid.element{
+    height: 10rem;
+    padding: 0;
+    position: relative;
+    background-image: url(images/pentagone.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+#results .grid.element h2 {
+    position: relative;
+    top: 30%;
+    font-size: var(--font-large);
+}
+#results.grid.element p{
+    position: relative;
+    top: 30%;
+}
+/**media queries**/
+@media (max-width:480px){
+    #results{
+        background-position: 50%;
+    }
+}
+/**main section-style 3-index-contact us**/
+#formcontact{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+}
+input {
+    width:50%;
+    margin:1rem 0;
+    height: 2rem;
+    color: black;
+    font-family: var(--font);
+    font-size: 14px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid rgba(7, 22, 41, 0.17);
+}
+input::placeholder{
+    color: black;
+    font-size: var(--font-medium);
+    font-weight: bold;
+}
+input:focus {
+    outline: none;
+}
+/**media queries**/
+@media (max-width:480px){
+    input{
+        width:90%;
+    }
 }
